调整项目结构，增加父项目配置，设置微服务及sdk模块